--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,22 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+
+@keyframes arrow-move {
+	from {
+		inset-inline-start: -22px;
+	}
+	to {
+		inset-inline-start: -18px;
+	}
+}
+
+@keyframes like {
+	from {
+		fill: none;
+	}
+
+	to {
+		fill: red;
+	}
+}
