--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,25 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
+:root.theme-dark {
+	--weight-text: 465;
+	--weight-title-text: 785;
+	--background-color: dark;
+	--repeating-linear-gradient-color: #000;
+	--linear-gradient-color-from: #007f0c;
+	--linear-gradient-color-to: #004306;
+	--repeating-gradient-direction: to right;
+	--linear-gradient-direction: to bottom;
+}
+
+:root.theme-light {
+	--weight-text: 400;
+	--weight-title-text: 700;
+	--background-color: white;
+	--repeating-linear-gradient-color: #d3d3d3;
+	--linear-gradient-color-from: #e7e7e7;
+	--linear-gradient-color-to: #1a1a1a;
+	--repeating-gradient-direction: to right;
+	--linear-gradient-direction: to bottom;
+}
