--- a/styles/variables.css
+++ b/styles/variables.css
@@ -6,6 +6,8 @@
 	--title-weight: 785;
 	--text-weight: 465;
 	--background-color: black;
+	--accent-color: #00cc14;
+	--theme-background: #000;
 	--repeating-linear-gradient-color: #000;
 	--linear-gradient-color-from: #007f0c;
 	--linear-gradient-color-to: #004306;
