--- a/styles/variables.css
+++ b/styles/variables.css
@@ -13,4 +13,6 @@
 	--linear-gradient-color-to: #004306;
 	--repeating-gradient-direction: to right;
 	--linear-gradient-direction: to bottom;
+	--heart-color: #ff0000;
+	--button-color: #00cc14;
 }
