--- a/styles/style.css
+++ b/styles/style.css
@@ -132,6 +132,8 @@
 
 .main {
 	display: flex;
+	flex-direction: column;
+	align-items: center;
 	gap: 54px;
 }
 
@@ -164,15 +166,15 @@
 	position: absolute;
 	z-index: 2;
 	font-family: 'Press Start 2P';
-	-webkit-text-stroke-width: 1;
-	-webkit-text-stroke-color: #eee;
 	opacity: 0.5;
 	text-transform: uppercase;
 	font-size: 14px;
-	inset-inline-end: 25px;
-	inset-block-start: 25px;
-	font-size: 10px;
+	inset-inline-end: clamp(0.688rem, 0.379rem + 1.315vw, 1.563rem);
+	inset-block-start: clamp(1.438rem, 1.393rem + 0.188vw, 1.563rem);
 	font-weight: 500;
+	mix-blend-mode: hard-light;
+	text-shadow: 1px 0 0 var(--theme-background), 0 1px 0 var(--theme-background),
+		-1px 0 0 var(--theme-background), 0 -1px 0 var(--theme-background);
 	color: var(--accent-color);
 }
 
@@ -187,7 +189,7 @@
 .card__actions {
 	display: flex;
 	justify-content: end;
-	gap: 12px;
+	gap: 7px;
 	padding: 25px;
 }
 
@@ -198,51 +200,69 @@
 	border: 2px solid var(--accent-color);
 }
 
-.core {
-	transition: fill 0.3s 0.03s linear;
+.card__like-button {
+	overflow: hidden;
 }
 
-.like-icon:hover .core {
-	fill: red;
-	transition: fill 0.3s linear;
+.card__like-button::before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: var(--accent-color);
+	transition: translate 0.5s ease-in-out;
+	translate: -100%;
 }
 
-.like-icon:active .core {
-	fill: red;
-	transition: fill 0.3s linear;
+.card__like-button:hover::before {
+	translate: 0%;
 }
 
-.main-body {
-	transition: fill 0.3s linear;
+.button__text {
+	color: var(--button-color);
+	position: relative;
+	z-index: 1;
+	mix-blend-mode: difference;
 }
 
 .contour {
 	fill: var(--accent-color);
-}
-
-.like-icon:hover .main-body {
-	fill: red;
 	transition: fill 0.3s 0.05s linear;
 }
 
-.like-icon:active .main-body {
-	fill: red;
-	transition: fill 0.3s 0.05s linear;
+.main-body,
+.core {
+	fill: transparent;
 }
 
-.like-icon.is-liked .core {
-	fill: red;
+.core {
 	transition: fill 0.3s linear;
 }
 
-.like-icon.is-liked .main-body {
-	fill: red;
+.main-body {
 	transition: fill 0.3s 0.05s linear;
 }
 
+.like-icon:hover .core,
+.like-icon:hover .main-body {
+	fill: var(--accent-color);
+}
+
+.like-icon:active .core,
+.like-icon:active .main-body {
+	fill: var(--heart-color);
+}
+
+.core {
+	transition: fill 0.3s linear;
+}
+
+.like-icon.is-liked .core,
+.like-icon.is-liked .main-body,
 .like-icon.is-liked .contour {
-	fill: red;
-	transition: fill 0.3s 0.06s linear;
+	fill: var(--heart-color);
 }
 
 .like-icon.is-liked .heart {
@@ -250,15 +270,8 @@
 	transform-origin: center;
 }
 
-.like-icon.is-liked .sparks {
-	animation: opacity-heart 0.3s 0.3s ease-in alternate;
-}
-
-@keyframes opacity-heart {
-	from {
-		opacity: 0;
-	}
-	to {
-		opacity: 1;
-	}
+.main__save-button {
+	inline-size: clamp(19.125rem, 18.487rem + 2.723vw, 20.938rem);
+	color: var(--accent-color);
+	padding-block: clamp(0.938rem, 0.86rem + 0.329vw, 1.156rem);
 }
