--- a/styles/style.css
+++ b/styles/style.css
@@ -47,7 +47,8 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	margin-block-end: 107px;
+	align-items: center;
+	margin-block-end: 97px;
 	font-family: 'Press Start 2P';
 	padding: 136px 0 25px 0;
 	border: 2px solid var(--accent-color);
@@ -60,7 +61,7 @@
 
 .header__title {
 	font-size: clamp(3.063rem, 2.715rem + 1.497vw, 4.063rem);
-	margin-block-end: 20px;
+	margin-block-end: 18px;
 }
 
 .header__subtitle {
@@ -69,9 +70,10 @@
 }
 
 .theme-menu__list {
+	padding-inline-start: 20px;
 	display: inline-flex;
 	flex-direction: column;
-	gap: 14px;
+	gap: 13px;
 }
 
 .theme-menu__item {
@@ -86,11 +88,16 @@
 	background: none;
 	border: none;
 	padding: 0;
+	outline: none;
 }
 
 .theme-menu__button:hover,
 .theme-menu__button:focus {
 	opacity: 0.6;
+}
+
+.theme-menu__button:focus::after {
+	scale: 1;
 }
 
 .theme-menu__button:focus {
@@ -107,10 +114,6 @@
 	position: absolute;
 	inset-inline-start: -30px;
 	animation: arrow-move 0.5s ease-in-out infinite alternate;
-}
-
-.theme-menu__button:hover::after {
-	scale: 1;
 }
 
 .theme-menu__button::after {
@@ -147,8 +150,9 @@
 }
 
 .card__title {
+	font-size: 18px;
 	font-variation-settings: 'wght' var(--title-weight);
-	padding: 3px 10px;
+	padding: 4px 6px;
 }
 
 .card__picture-wrap {
@@ -196,8 +200,8 @@
 	font-family: 'Press Start 2P';
 	opacity: 0.5;
 	font-size: 14px;
-	inset-inline-end: clamp(0.688rem, 0.379rem + 1.315vw, 1.563rem);
-	inset-block-start: clamp(1.438rem, 1.393rem + 0.188vw, 1.563rem);
+	inset-inline-end: clamp(0.688rem, 0.423rem + 1.127vw, 1.438rem);
+	inset-block-start: clamp(1.563rem, 1.452rem + 0.469vw, 1.875rem);
 	font-weight: 500;
 	mix-blend-mode: hard-light;
 	text-shadow: 1px 0 0 var(--theme-background), 0 1px 0 var(--theme-background),
@@ -225,6 +229,12 @@
 	padding-block: 9px;
 	line-height: 90%;
 	border: 2px solid var(--accent-color);
+	cursor: pointer;
+}
+
+.card__button:focus {
+	outline: none;
+	box-shadow: 2px 2px 0px 0px #000;
 }
 
 .card__button {
@@ -277,6 +287,10 @@
 	transition: fill 0.3s 0.05s linear;
 }
 
+.like-icon {
+	cursor: pointer;
+}
+
 .like-icon:hover .core,
 .like-icon:hover .main-body {
 	fill: var(--accent-color);
@@ -308,13 +322,14 @@
 }
 
 .main__save-button {
-	inline-size: clamp(19.125rem, 18.487rem + 2.723vw, 20.938rem);
-	padding: clamp(0.938rem, 0.86rem + 0.329vw, 1.156rem);
+	inline-size: clamp(19.125rem, 18.465rem + 2.817vw, 21rem);
+	padding: 15px 18px;
 	background-color: var(--theme-background);
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
 	justify-content: center;
+	float: left;
 	gap: 8px;
 }
 
@@ -329,7 +344,7 @@
 	grid-template-rows: min-content min-content;
 	row-gap: 30px;
 	column-gap: 20px;
-	inline-size: 341px;
+	inline-size: clamp(21.313rem, 20.96rem + 1.502vw, 22.313rem);
 	font-family: 'Press Start 2P';
 	background-color: var(--theme-background);
 	color: var(--accent-color);
