--- a/styles/themes.css
+++ b/styles/themes.css
@@ -24,13 +24,13 @@
 	--weight-title-text: 700;
 	--background-color: white;
 	--accent-color: #000;
-	--theme-background: #eee;
+	--theme-background: #ffffff;
 	--repeating-linear-gradient-color: #d3d3d3;
 	--linear-gradient-color-from: #e7e7e7;
 	--linear-gradient-color-to: #1a1a1a;
 	--repeating-gradient-direction: to right;
 	--linear-gradient-direction: to bottom;
-	--button-color: #eee;
+	--button-color: #ffffff;
 }
 
 @media (prefers-color-scheme: light) {
