--- a/styles/style.css
+++ b/styles/style.css
@@ -41,6 +41,7 @@
 			var(--linear-gradient-color-to)
 		);
 	background-size: cover;
+	background-attachment: fixed;
 }
 
 .header {
@@ -49,8 +50,8 @@
 	justify-content: center;
 	align-items: center;
 	margin-block-end: 97px;
-	font-family: 'Press Start 2P';
-	padding: 136px 0 25px 0;
+	font-family: var(--accent-font);
+	padding: clamp(7.5rem, 7.148rem + 1.502vw, 8.5rem) 0 25px 0;
 	border: 2px solid var(--accent-color);
 	background-color: var(--theme-background);
 	color: var(--accent-color);
@@ -62,6 +63,7 @@
 .header__title {
 	font-size: clamp(3.063rem, 2.715rem + 1.497vw, 4.063rem);
 	margin-block-end: 18px;
+	outline: none;
 }
 
 .header__subtitle {
@@ -82,13 +84,18 @@
 
 .button {
 	position: relative;
-	font-family: 'Press Start 2P';
+	font-family: var(--accent-font);
 	font-size: 14px;
 	text-transform: inherit;
 	background: none;
 	border: none;
 	padding: 0;
 	outline: none;
+	cursor: pointer;
+}
+
+.theme-menu__button {
+	transition: opacity 0.3s ease;
 }
 
 .theme-menu__button:hover,
@@ -113,6 +120,7 @@
 	content: '▶';
 	position: absolute;
 	inset-inline-start: -30px;
+	inset-block-start: 0;
 	animation: arrow-move 0.5s ease-in-out infinite alternate;
 }
 
@@ -125,7 +133,7 @@
 	width: 100%;
 	height: 2px;
 	background-color: var(--accent-color);
-	transition: scale 0.5s, opacity 0.5s ease;
+	transition: scale 0.3s ease;
 	transform-origin: left;
 }
 
@@ -137,13 +145,13 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	gap: 54px;
+	gap: 50px;
 }
 
 .card {
 	inline-size: 100%;
 	border: 2px solid var(--accent-color);
-	font-family: Inter;
+	font-family: var(--main-font);
 	font-variation-settings: 'wght' var(--text-weight);
 	color: var(--accent-color);
 	background-color: var(--theme-background);
@@ -152,7 +160,7 @@
 .card__title {
 	font-size: 18px;
 	font-variation-settings: 'wght' var(--title-weight);
-	padding: 4px 6px;
+	padding: 4px 7px;
 }
 
 .card__picture-wrap {
@@ -163,7 +171,9 @@
 	border-block-start: 2px solid var(--accent-color);
 	border-block-end: 2px solid var(--accent-color);
 	object-fit: cover;
-	width: 100%;
+	object-position: right;
+	width: clamp(23.188rem, 16.035rem + 30.516vw, 43.5rem);
+	aspect-ratio: 1;
 }
 
 .card__image_grayscale {
@@ -197,7 +207,7 @@
 .card__watermark {
 	position: absolute;
 	z-index: 2;
-	font-family: 'Press Start 2P';
+	font-family: var(--accent-font);
 	opacity: 0.5;
 	font-size: 14px;
 	inset-inline-end: clamp(0.688rem, 0.423rem + 1.127vw, 1.438rem);
@@ -231,8 +241,17 @@
 .card__actions {
 	display: flex;
 	justify-content: end;
-	gap: 7px;
+	gap: 5px;
 	padding: 25px;
+}
+
+.card__icon-button {
+	border: 2px solid transparent;
+	transition: border-color 0.3s ease;
+}
+
+.card__icon-button:focus-visible {
+	border-color: currentColor;
 }
 
 .card__button {
@@ -240,13 +259,13 @@
 	padding-block: 9px;
 	line-height: 90%;
 	border: 2px solid var(--accent-color);
-	cursor: pointer;
+	transition: translate 0.5s ease-in-out, box-shadow 0.3s ease;
 	overflow: hidden;
 }
 
 .card__button:focus {
 	outline: none;
-	box-shadow: 2px 2px 0px 0px #000;
+	box-shadow: 2px 2px 0px 0px var(--accent-color);
 }
 
 .card__button::before {
@@ -257,7 +276,7 @@
 	width: 100%;
 	height: 100%;
 	background-color: var(--accent-color);
-	transition: translate 0.5s ease-in-out;
+
 	translate: -100%;
 }
 
@@ -274,6 +293,7 @@
 
 .contour {
 	fill: var(--accent-color);
+	transition: fill 0.1s linear;
 }
 
 .sparks {
@@ -287,26 +307,35 @@
 }
 
 .core {
-	transition: fill 0.3s linear;
+	transition: fill 0.3s 0.03s linear;
 }
 
-.main-body,
-.contour {
-	transition: fill 0.3s 0.05s linear;
+.main-body {
+	transition: fill 0.3s linear;
 }
 
 .like-icon {
 	cursor: pointer;
 }
 
-.like-icon:hover .core,
-.like-icon:hover .main-body {
+.like-icon:hover .core {
 	fill: var(--accent-color);
+	transition: fill 0.3s linear;
 }
 
-.like-icon:active .core,
+.like-icon:hover .main-body {
+	fill: var(--accent-color);
+	transition: fill 0.3s 0.05s linear;
+}
+
+.like-icon:active .core {
+	fill: var(--heart-color);
+	transition: fill 0.3s linear;
+}
+
 .like-icon:active .main-body {
 	fill: var(--heart-color);
+	transition: fill 0.3s 0.05s linear;
 }
 
 .like-icon.is-liked .core,
@@ -316,8 +345,20 @@
 	fill: var(--heart-color);
 }
 
+.like-icon.is-liked .core {
+	transition: fill 0.3s linear;
+}
+
+.like-icon.is-liked .main-body {
+	transition: fill 0.3s 0.05s linear;
+}
+
+.like-icon.is-liked .contour {
+	transition: fill 0.3s 0.06s linear;
+}
+
 .like-icon.is-liked .sparks {
-	animation: sparks-blink 0.3s 0.3s ease-in;
+	animation: sparks-blink 0.3s 0.3s ease-in alternate;
 }
 
 .like-icon.is-liked .heart {
@@ -327,7 +368,7 @@
 
 .main__save-button {
 	inline-size: clamp(19.125rem, 18.465rem + 2.817vw, 21rem);
-	padding: 15px 18px;
+	padding: 15px;
 	background-color: var(--theme-background);
 	display: flex;
 	flex-wrap: wrap;
@@ -338,6 +379,7 @@
 }
 
 .main__svg {
+	width: clamp(1.75rem, 1.904rem + -0.657vw, 1.313rem);
 	color: var(--button-color);
 	mix-blend-mode: difference;
 }
@@ -349,7 +391,7 @@
 	row-gap: 30px;
 	column-gap: 20px;
 	inline-size: clamp(21.313rem, 20.96rem + 1.502vw, 22.313rem);
-	font-family: 'Press Start 2P';
+	font-family: var(--accent-font);
 	background-color: var(--theme-background);
 	color: var(--accent-color);
 	font-size: 14px;
@@ -358,6 +400,8 @@
 	padding-inline: clamp(2rem, 1.783rem + 0.935vw, 2.625rem);
 	justify-content: center;
 	align-items: center;
+	text-transform: uppercase;
+	line-height: 150%;
 }
 
 .dialog::backdrop {
