--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,7 +2,7 @@
 
 :root {
 	--main-font: 'Inter', sans-serif;
-	--accent-font: 'PressStart2P', sans-serif;
+	--accent-font: 'Press Start 2P', fantasy;
 	--title-weight: 785;
 	--text-weight: 465;
 	--background-color: black;
