--- a/styles/animations.css
+++ b/styles/animations.css
@@ -13,6 +13,81 @@
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
 
+.contour {
+	fill: var(--accent-color);
+	transition: fill 0.1s linear;
+}
+
+.sparks {
+	opacity: 0;
+}
+
+.main-body,
+.core,
+.sparks {
+	fill: transparent;
+}
+
+.core {
+	transition: fill 0.3s 0.03s linear;
+}
+
+.main-body {
+	transition: fill 0.3s linear;
+}
+
+.like-icon {
+	cursor: pointer;
+}
+
+.like-icon:hover .core {
+	fill: var(--accent-color);
+	transition: fill 0.3s linear;
+}
+
+.like-icon:hover .main-body {
+	fill: var(--accent-color);
+	transition: fill 0.3s 0.05s linear;
+}
+
+.like-icon:active .core {
+	fill: var(--heart-color);
+	transition: fill 0.3s linear;
+}
+
+.like-icon:active .main-body {
+	fill: var(--heart-color);
+	transition: fill 0.3s 0.05s linear;
+}
+
+.like-icon.is-liked .core,
+.like-icon.is-liked .main-body,
+.like-icon.is-liked .contour,
+.like-icon.is-liked .sparks {
+	fill: var(--heart-color);
+}
+
+.like-icon.is-liked .core {
+	transition: fill 0.3s linear;
+}
+
+.like-icon.is-liked .main-body {
+	transition: fill 0.3s 0.05s linear;
+}
+
+.like-icon.is-liked .contour {
+	transition: fill 0.3s 0.06s linear;
+}
+
+.like-icon.is-liked .sparks {
+	animation: sparks-blink 0.3s 0.3s ease-in alternate;
+}
+
+.like-icon.is-liked .heart {
+	animation: scale-heart 0.3s 0.1s ease-in alternate;
+	transform-origin: center;
+}
+
 @keyframes arrow-move {
 	from {
 		inset-inline-start: -20px;
