--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	margin-block-end: 97px;
+	margin-block-end: 103px;
 	font-family: var(--accent-font);
 	padding: clamp(7.5rem, 7.148rem + 1.502vw, 8.5rem) 0 25px 0;
 	border: 2px solid var(--accent-color);
@@ -64,18 +64,19 @@
 	font-size: clamp(3.063rem, 2.715rem + 1.497vw, 4.063rem);
 	margin-block-end: 18px;
 	outline: none;
+	text-decoration: none;
 }
 
 .header__subtitle {
 	font-size: clamp(0.875rem, 0.68rem + 0.842vw, 1.438rem);
-	margin-block-end: 25px;
+	margin-block-end: 23px;
 }
 
 .theme-menu__list {
 	padding-inline-start: 20px;
 	display: inline-flex;
 	flex-direction: column;
-	gap: 13px;
+	gap: 11px;
 }
 
 .theme-menu__item {
@@ -155,6 +156,7 @@
 	font-variation-settings: 'wght' var(--text-weight);
 	color: var(--accent-color);
 	background-color: var(--theme-background);
+	overflow: hidden;
 }
 
 .card__title {
@@ -171,7 +173,7 @@
 	border-block-start: 2px solid var(--accent-color);
 	border-block-end: 2px solid var(--accent-color);
 	object-fit: cover;
-	object-position: right;
+	object-position: center;
 	width: clamp(23.188rem, 16.035rem + 30.516vw, 43.5rem);
 	aspect-ratio: 1;
 }
@@ -235,13 +237,15 @@
 	flex-direction: column;
 	gap: 27px;
 	font-size: 18px;
-	padding: 25px 25px 0 25px;
+	/* Почему-то не смог воспроизвести проблему в высотой строки ни в одном браузере */
+	line-height: 116%;
+	padding: 26px 25px 0 25px;
 }
 
 .card__actions {
 	display: flex;
 	justify-content: end;
-	gap: 5px;
+	gap: 2px;
 	padding: 25px;
 }
 
@@ -259,7 +263,7 @@
 	padding-block: 9px;
 	line-height: 90%;
 	border: 2px solid var(--accent-color);
-	transition: translate 0.5s ease-in-out, box-shadow 0.3s ease;
+	transition: box-shadow 0.3s ease;
 	overflow: hidden;
 }
 
@@ -276,8 +280,8 @@
 	width: 100%;
 	height: 100%;
 	background-color: var(--accent-color);
-
 	translate: -100%;
+	transition: translate 0.5s ease-in-out;
 }
 
 .card__button:hover::before {
@@ -289,81 +293,6 @@
 	position: relative;
 	z-index: 1;
 	mix-blend-mode: difference;
-}
-
-.contour {
-	fill: var(--accent-color);
-	transition: fill 0.1s linear;
-}
-
-.sparks {
-	opacity: 0;
-}
-
-.main-body,
-.core,
-.sparks {
-	fill: transparent;
-}
-
-.core {
-	transition: fill 0.3s 0.03s linear;
-}
-
-.main-body {
-	transition: fill 0.3s linear;
-}
-
-.like-icon {
-	cursor: pointer;
-}
-
-.like-icon:hover .core {
-	fill: var(--accent-color);
-	transition: fill 0.3s linear;
-}
-
-.like-icon:hover .main-body {
-	fill: var(--accent-color);
-	transition: fill 0.3s 0.05s linear;
-}
-
-.like-icon:active .core {
-	fill: var(--heart-color);
-	transition: fill 0.3s linear;
-}
-
-.like-icon:active .main-body {
-	fill: var(--heart-color);
-	transition: fill 0.3s 0.05s linear;
-}
-
-.like-icon.is-liked .core,
-.like-icon.is-liked .main-body,
-.like-icon.is-liked .contour,
-.like-icon.is-liked .sparks {
-	fill: var(--heart-color);
-}
-
-.like-icon.is-liked .core {
-	transition: fill 0.3s linear;
-}
-
-.like-icon.is-liked .main-body {
-	transition: fill 0.3s 0.05s linear;
-}
-
-.like-icon.is-liked .contour {
-	transition: fill 0.3s 0.06s linear;
-}
-
-.like-icon.is-liked .sparks {
-	animation: sparks-blink 0.3s 0.3s ease-in alternate;
-}
-
-.like-icon.is-liked .heart {
-	animation: scale-heart 0.3s 0.1s ease-in alternate;
-	transform-origin: center;
 }
 
 .main__save-button {
@@ -379,7 +308,7 @@
 }
 
 .main__svg {
-	width: clamp(1.75rem, 1.904rem + -0.657vw, 1.313rem);
+	inline-size: clamp(21px, calc(30.465px - 0.657vw), 28px);
 	color: var(--button-color);
 	mix-blend-mode: difference;
 }
